# fntime

./: .gitignore  README.md  pyproject.toml  setup.cfg
src/fntime/: __init__.py  fntime.py
tests/: test_fntime.py
