[metadata]
name = fntime
version = 0.1.01
author = Rob Sutherland
author_email = rob@robsutherland.net
description = A simple way to time how many iterations of a function can be completed within a time interval
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/roberocity/fntime
project_urls =
    Bug Tracker = https://github.com/roberocity/fntime/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src